[package]
name = "fvm-workbench"
description = "Standalone Filecoin virtual machine for development, testing, and debugging"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["@anorth"]
edition = "2021"

[workspace]
members = [
    "api",
    "builtin",
    "vm",
]

[workspace.dependencies]
cid = { version = "0.10.1", default-features = false }
frc46_token = { version = "7.0.0" }
# fvm feature=testing required to not be amazingly slow
fvm = { version = "~3.5.0", default-features = false, features = ["testing"] }
fvm_actor_utils = { version = "7.0.0" }
fvm_ipld_bitfield = { version = "0.5.2"}
fvm_ipld_blockstore = { version = "0.2.0" }
fvm_ipld_car = { version = "0.7.0"}
fvm_ipld_encoding = { version = "0.4.0" }
fvm_ipld_hamt = { version = "0.7.0" }
fvm_shared = { version = "~3.4.0", default-features = false }

fil_builtin_actors_bundle = { package="fil_builtin_actors_bundle", version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68" }
fil_builtin_actors_state = { version = "1.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68" }
fil_actor_account = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_cron = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_datacap = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_init = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_market = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_miner = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_multisig = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_paych = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_power = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_reward = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_system = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actor_verifreg = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
fil_actors_runtime = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68", features = [] }
vm_api = { version = "1.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68" }
fil_actors_integration_tests = { version = "1.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68" }

anyhow = { version = "~1.0.47" }
blake2b_simd = { version = "1.0" }
bls-signatures = { version = "0.13", default-features = false }
futures = { version = "~0.3.19" }
libsecp256k1 = { version = "0.7.1"}
multihash = { version = "0.18.1", default-features = false }
num-traits = "0.2.14"
rand_chacha = "~0.3"
replace_with = "0.1.7"

[patch.crates-io]
# even though the dep is specified as a git repo in dependencies, cargo tries to pick from crates.io without this patch
fil_builtin_actors_bundle = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", rev = "0679eecb12bf2ec7091866c442f410062b21bf68" }

# fvm = {git="https://github.com/helix-onchain/ref-fvm", branch="alexytsu/update-builtins"}
# fvm_ipld_hamt = {git="https://github.com/helix-onchain/ref-fvm", branch="alexytsu/update-builtins"}
# fvm_ipld_amt = {git="https://github.com/helix-onchain/ref-fvm", branch="alexytsu/update-builtins"}
# fvm_ipld_blockstore = {git="https://github.com/helix-onchain/ref-fvm", branch="alexytsu/update-builtins"}
# fvm_ipld_encoding = {git="https://github.com/helix-onchain/ref-fvm", branch="alexytsu/update-builtins"}
# fvm_shared = {git="https://github.com/helix-onchain/ref-fvm", branch="alexytsu/update-builtins"}
# fvm_sdk = {git="https://github.com/helix-onchain/ref-fvm", branch="alexytsu/update-builtins"}

## Patches for local development
# fvm = { path = "../../filecoin-project/ref-fvm/fvm" }
# fvm_ipld_hamt = { path = "../../filecoin-project/ref-fvm/ipld/hamt"}
# fvm_ipld_amt = { path = "../../filecoin-project/ref-fvm/ipld/amt"}
# fvm_ipld_blockstore = { path = "../../filecoin-project/ref-fvm/ipld/blockstore" }
# fvm_ipld_encoding = { path = "../../filecoin-project/ref-fvm/ipld/encoding" }
# fvm_shared = { path = "../../filecoin-project/ref-fvm/shared" }
# fvm_sdk = { path = "../../filecoin-project/ref-fvm/sdk" }

[patch.'https://github.com/filecoin-project/builtin-actors']
## Patches to profile/benchmark local changes to actor code.
# fil_builtin_actors_bundle = { path = "../../filecoin-project/builtin-actors" }
# fil_actor_account = { path = "../../filecoin-project/builtin-actors/actors/account" }
# fil_actor_cron = { path = "../../filecoin-project/builtin-actors/actors/cron" }
# fil_actor_datacap = { path = "../../filecoin-project/builtin-actors/actors/datacap" }
# fil_actor_init = { path = "../../filecoin-project/builtin-actors/actors/init" }
# fil_actor_market = { path = "../../filecoin-project/builtin-actors/actors/market" }
# fil_actor_miner = { path = "../../filecoin-project/builtin-actors/actors/miner" }
# fil_actor_multisig = { path = "../../filecoin-project/builtin-actors/actors/multisig" }
# fil_actor_paych = { path = "../../filecoin-project/builtin-actors/actors/paych" }
# fil_actor_power = { path = "../../filecoin-project/builtin-actors/actors/power" }
# fil_actor_reward = { path = "../../filecoin-project/builtin-actors/actors/reward" }
# fil_actor_system = { path = "../../filecoin-project/builtin-actors/actors/system" }
# fil_actor_verifreg = { path = "../../filecoin-project/builtin-actors/actors/verifreg" }
# fil_actors_runtime = { path = "../../filecoin-project/builtin-actors/runtime" }
# vm_api = { path = "../../filecoin-project/builtin-actors/vm_api" }
# fil_actors_integration_tests = { path = "../../filecoin-project/builtin-actors/integration_tests" }