[package]
name = "fvm-workbench-api"
description = "API abstracting over VM implementations for actor development, testing, and debugging"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["@anorth"]
edition = "2021"

[dependencies]
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
vm_api = { workspace = true }

anyhow = "~1.0.47"
cid = { workspace = true }
itertools = "~0.10.5"
num-format = "0.4.4"
