[package]
name = "fvm-workbench-builtin-actors"
description = "FVM workbench instance with built-in actors"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["@anorth"]
edition = "2021"

[dependencies]
fvm-workbench-vm = { path = "../vm" }
fvm-workbench-api = { path = "../api" }

# depend on a mainline actors v12 commit with v3.2 depednencies
actors-v12 = { package = "fil_builtin_actors_bundle", version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master" }
fil_actor_account = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_cron = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_datacap = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_init = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_market = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_miner = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_multisig = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_paych = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_power = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_reward = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_system = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actor_verifreg = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }
fil_actors_runtime = { version = "12.0.0", git = "https://github.com/filecoin-project/builtin-actors", branch = "master", features = [] }

fvm = { workspace = true }
fvm_actor_utils = { workspace = true } 
fvm_ipld_bitfield = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_ipld_hamt = { workspace = true } 
fvm_shared = { workspace = true }
vm_api = { workspace = true }

# Used directly in some tests
frc46_token = { workspace = true }

anyhow = { workspace = true }
blake2b_simd = { workspace = true }
bls-signatures = { workspace = true }
cid = { workspace = true }
libsecp256k1 = { workspace = true }
rand_chacha = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
log = "0.4"
env_logger = "0.8"