[package]
name = "fvm-workbench-vm"
description = "Standalone Filecoin virtual machine for development, testing, and debugging"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["@anorth"]
edition = "2021"

[dependencies]
fvm-workbench-api = { path = "../api" }

fvm = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_car = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }

anyhow = "~1.0.47"
cid = { workspace = true }
futures = "~0.3.19"
multihash = { version = "0.18.1", default-features = false }
replace_with = "0.1.7"
thiserror = "~1.0.30"
