[package]
name = "fvm-workbench-vm"
description = "Standalone Filecoin virtual machine for development, testing, and debugging"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["@anorth"]
edition = "2021"

[dependencies]
fvm-workbench-api = { path = "../api" }

fvm = { workspace = true }
fvm_ipld_blockstore = { workspace = true }
fvm_ipld_car = { workspace = true }
fvm_ipld_encoding = { workspace = true }
fvm_shared = { workspace = true }
vm_api = { workspace = true }

anyhow = "~1.0.47"
blake2b_simd = { version = "1.0" }
cid = { workspace = true }
futures = { workspace = true } 
libsecp256k1 = { workspace = true }
multihash = { workspace = true }
replace_with = { workspace = true }
